# cuda-vector-search

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
scripts/: embed_dataset.py
src/: check_roundtrip.cu  compute_distances.cu  distance_kernel.cu  distance_kernel.cuh
src/diagnostics/: check_topk.cu
